統一格式： - 統一使用「爆發」作為爆發攻擊的類型 - 統一按鈕組合的描述方式 - 使用「～」表示連續技 - 統一使用全形標點符號 - 統一方向用語（前、後、上、下、空中） - 修正備註說明用語 - 統一頁尾資訊格式

--- a/火焰雞.html
+++ b/火焰雞.html
@@ -90,9 +90,9 @@ a:hover {
     <div class="info-container">
         <div class="pokemon-info">
             <h2>基本資訊</h2>
-            <p>英文名稱: Blaziken</p>
-            <p>中文名稱: 火焰雞</p>
-            <p>遊戲: Pokkén Tournament DX</p>
+            <p>英文名稱：Blaziken</p>
+            <p>中文名稱：火焰雞</p>
+            <p>遊戲：Pokkén Tournament DX</p>
         </div>
         <div class="pokemon-image">
             <img src="images/blaziken.jpg" alt="火焰雞">
@@ -111,13 +111,15 @@ a:hover {
     </tr>
     <tr>
         <td>連環火焰踢</td>
-        <td>一般</td>
+        <td>爆發</td>
         <td>全階段</td>
-        <td>L + R during Synergy Burst</td>
-        <td>反擊 attack pierce. Increases your Speed</td>
+        <td>同步爆發時按 L + R</td>
+        <td>可貫穿反擊攻擊。提升移動速度</td>
         <td>262</td>
     </tr>
-</table><h2>寶可夢招式</h2>
+</table>
+
+<h2>寶可夢招式</h2>
 <table>
     <tr>
         <th>招式名稱</th>
@@ -131,39 +133,39 @@ a:hover {
         <td>熱風</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A</td>
-        <td>可阻止對手</td>
+        <td>按 A</td>
+        <td>可阻止對手行動</td>
         <td>80</td>
     </tr>
     <tr>
         <td>火焰踢</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Forward + A</td>
+        <td>前 + A</td>
         <td>無特殊效果</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>火焰踢~閃焰衝鋒</td>
+        <td>火焰踢～閃焰衝鋒</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Forward + A, X</td>
-        <td>傷害值s yourself. 反擊 Attack Pierce. Resists hit stun.</td>
+        <td>前 + A，X</td>
+        <td>自身受到傷害。可貫穿反擊攻擊。具有打擊抗性</td>
         <td>120</td>
     </tr>
     <tr>
-        <td>火焰踢~強化閃焰衝鋒</td>
+        <td>火焰踢～強化閃焰衝鋒</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Forward + A, Hold X</td>
-        <td>傷害值s yourself. 反擊 Attack Pierce. Resists hit stun.</td>
+        <td>前 + A，長按 X</td>
+        <td>自身受到傷害。可貫穿反擊攻擊。具有打擊抗性</td>
         <td>120</td>
     </tr>
     <tr>
         <td>勇鳥猛攻</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Backward + A</td>
+        <td>後 + A</td>
         <td>無特殊效果</td>
         <td>80</td>
     </tr>
@@ -171,19 +173,21 @@ a:hover {
         <td>飛膝踢</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair A</td>
-        <td>傷害值s yourself if the attack misses.</td>
+        <td>空中 A</td>
+        <td>招式未命中時自身受到傷害</td>
         <td>100</td>
     </tr>
     <tr>
         <td>天空上捲</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + A</td>
+        <td>上 + A</td>
         <td>無特殊效果</td>
         <td>128</td>
     </tr>
-</table><h2>標準招式</h2>
+</table>
+
+<h2>標準招式</h2>
 <table>
     <tr>
         <th>招式名稱</th>
@@ -197,59 +201,61 @@ a:hover {
         <td>強化熱風</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Hold A</td>
-        <td>長按 to consume HP and extend attack length. Lowers opponent's Attack</td>
+        <td>長按 A</td>
+        <td>長按可消耗生命值並延長攻擊時間。降低對手攻擊力</td>
         <td>140</td>
     </tr>
     <tr>
         <td>強化火焰踢</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Forward + Hold A</td>
-        <td>傷害值s yourself.</td>
+        <td>前 + 長按 A</td>
+        <td>自身受到傷害</td>
         <td>140</td>
     </tr>
     <tr>
-        <td>強化火焰踢~閃焰衝鋒</td>
+        <td>強化火焰踢～閃焰衝鋒</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Forward + Hold A, X</td>
-        <td>傷害值s yourself. 反擊 Attack Pierce. Resists hit stun.</td>
+        <td>前 + 長按 A，X</td>
+        <td>自身受到傷害。可貫穿反擊攻擊。具有打擊抗性</td>
         <td>150</td>
     </tr>
     <tr>
-        <td>強化火焰踢~強化閃焰衝鋒</td>
+        <td>強化火焰踢～強化閃焰衝鋒</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Forward + Hold A + Hold X</td>
-        <td>傷害值s yourself. 反擊 Attack Pierce. Resists hit stun.</td>
+        <td>前 + 長按 A + 長按 X</td>
+        <td>自身受到傷害。可貫穿反擊攻擊。具有打擊抗性</td>
         <td>150</td>
     </tr>
     <tr>
         <td>強化勇鳥猛攻</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Backward + Hold A</td>
-        <td>傷害值s yourself.</td>
+        <td>後 + 長按 A</td>
+        <td>自身受到傷害</td>
         <td>160</td>
     </tr>
     <tr>
         <td>強化飛膝踢</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair Hold A</td>
-        <td>傷害值s yourself. 反擊 Attack Pierce. 傷害值s yourself further if misses. Transitions to midair attacks</td>
+        <td>空中長按 A</td>
+        <td>自身受到傷害。可貫穿反擊攻擊。招式未命中時自身受到進一步傷害。轉換為跳躍攻擊</td>
         <td>120</td>
     </tr>
     <tr>
         <td>強化天空上捲</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + Hold A</td>
-        <td>Incurs another attack upon hit. Transitions into midair attacks.</td>
+        <td>上 + 長按 A</td>
+        <td>命中後會進行另一波攻擊。轉換為跳躍攻擊</td>
         <td>164</td>
     </tr>
-</table><h2>僅限同步爆發時</h2>
+</table>
+
+<h2>僅限同步爆發時</h2>
 <table>
     <tr>
         <th>招式名稱</th>
@@ -263,7 +269,7 @@ a:hover {
         <td>抓取攻擊</td>
         <td>抓取</td>
         <td>全階段</td>
-        <td>Y + B</td>
+        <td>按 Y + B</td>
         <td>可破防</td>
         <td>80</td>
     </tr>
@@ -271,39 +277,39 @@ a:hover {
         <td>反擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>X + A</td>
-        <td>可用方向鍵+R取消. Increases range during 同步爆發</td>
+        <td>按 X + A</td>
+        <td>可用方向鍵 + R 取消。同步爆發時增加攻擊距離</td>
         <td>60</td>
     </tr>
     <tr>
         <td>蓄力反擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>X + Hold A</td>
-        <td>反擊 Attack Pierce</td>
+        <td>按 X + 長按 A</td>
+        <td>可貫穿反擊攻擊</td>
         <td>80</td>
     </tr>
     <tr>
         <td>空中衝刺</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>Midair R</td>
-        <td>Transition into midair attacks</td>
+        <td>跳躍時按 R</td>
+        <td>轉換為跳躍攻擊</td>
         <td>0</td>
     </tr>
     <tr>
         <td>蓄力強攻擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Charge and then release X</td>
-        <td>Can move with D-Pad. 對空中對手有效.</td>
+        <td>蓄力後按 X</td>
+        <td>可用方向鍵移動。對空中對手有效</td>
         <td>120</td>
     </tr>
     <tr>
         <td>遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Y</td>
+        <td>按 Y</td>
         <td>可用寶可夢招式取消</td>
         <td>47</td>
     </tr>
@@ -311,7 +317,7 @@ a:hover {
         <td>連接遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Y, Y</td>
+        <td>按 Y，Y</td>
         <td>無特殊效果</td>
         <td>77</td>
     </tr>
@@ -319,7 +325,7 @@ a:hover {
         <td>側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y</td>
+        <td>按側 + Y</td>
         <td>無特殊效果</td>
         <td>20</td>
     </tr>
@@ -327,7 +333,7 @@ a:hover {
         <td>連接側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y, Y</td>
+        <td>按側 + Y，Y</td>
         <td>切換階段</td>
         <td>62</td>
     </tr>
@@ -335,7 +341,7 @@ a:hover {
         <td>前方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Forward + Y</td>
+        <td>按前 + Y</td>
         <td>無特殊效果</td>
         <td>60</td>
     </tr>
@@ -343,15 +349,15 @@ a:hover {
         <td>後方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Backward + Y</td>
-        <td>Cancels some long range attacks. Move with the D-Pad</td>
+        <td>按後 + Y</td>
+        <td>可取消部分遠距離攻擊。可用方向鍵移動</td>
         <td>91</td>
     </tr>
     <tr>
         <td>跳躍遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Y</td>
+        <td>跳躍時按 Y</td>
         <td>無特殊效果</td>
         <td>30</td>
     </tr>
@@ -359,15 +365,15 @@ a:hover {
         <td>Link Up with Jumping Ranged Attacks 1</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Y, Y</td>
-        <td>Change trajectory by pressing D-Pad forward and backward. Stops your opponent</td>
+        <td>跳躍時按 Y，Y</td>
+        <td>可用方向鍵前後移動。停止對手行動</td>
         <td>96</td>
     </tr>
     <tr>
         <td>Link Up with Jumping Ranged Attacks 2</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Y, Side + Y</td>
+        <td>跳躍時按 Y，側 + Y</td>
         <td>切換階段</td>
         <td>60</td>
     </tr>
@@ -375,7 +381,7 @@ a:hover {
         <td>跳躍側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Side + Y</td>
+        <td>跳躍時按側 + Y</td>
         <td>無特殊效果</td>
         <td>60</td>
     </tr>
@@ -383,39 +389,39 @@ a:hover {
         <td>追蹤攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, X, X</td>
-        <td>可用R取消 or B</td>
+        <td>按 X，X，X</td>
+        <td>可用 R 取消或 B</td>
         <td>117</td>
     </tr>
     <tr>
         <td>蓄力追蹤攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, X, Hold X</td>
-        <td>貫穿反擊 and breaks the guard</td>
+        <td>按 X，X，長按 X</td>
+        <td>可貫穿反擊攻擊。破防</td>
         <td>157</td>
     </tr>
     <tr>
         <td>跳躍攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair X</td>
+        <td>跳躍時按 X</td>
         <td>無特殊效果</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>Jumping Attack: Charge</td>
+        <td>Jumping Attack：Charge</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Hold X</td>
-        <td>反擊 attack pierce. Opens for more attacks</td>
+        <td>跳躍時長按 X</td>
+        <td>可貫穿反擊攻擊。開啟更多攻擊機會</td>
         <td>120</td>
     </tr>
     <tr>
         <td>寶可連擊1</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Y, Y, Y, Y</td>
+        <td>按 Y，Y，Y，Y</td>
         <td>造成大量傷害</td>
         <td>120</td>
     </tr>
@@ -423,31 +429,31 @@ a:hover {
         <td>弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Y, Y, Y</td>
-        <td>可用寶可夢招式取消. Increased range during 同步爆發</td>
+        <td>按 Y，Y，Y</td>
+        <td>可用寶可夢招式取消。同步爆發時增加攻擊距離</td>
         <td>64</td>
     </tr>
     <tr>
         <td>前方弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + Y</td>
+        <td>按前 + Y</td>
         <td>無特殊效果</td>
         <td>40</td>
     </tr>
     <tr>
-        <td>Forward Weak Attack ~ Weak Attack Follow-up</td>
+        <td>Forward Weak Attack ～ Weak Attack Follow-up</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + Y, Y</td>
+        <td>按前 + Y，Y</td>
         <td>無特殊效果</td>
         <td>72</td>
     </tr>
     <tr>
-        <td>Forward Weak Attack ~ Strong Attack Follow-up</td>
+        <td>Forward Weak Attack ～ Strong Attack Follow-up</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + Y, X</td>
+        <td>按前 + Y，X</td>
         <td>無特殊效果</td>
         <td>104</td>
     </tr>
@@ -455,23 +461,23 @@ a:hover {
         <td>寶可連擊2</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + Y, Y</td>
-        <td>Opens for more attacks</td>
+        <td>按上 + Y，Y</td>
+        <td>開啟更多攻擊機會</td>
         <td>130</td>
     </tr>
     <tr>
         <td>高姿勢弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + Y</td>
-        <td>Transitions to midair attacks. Can be cancelled with Pokémon moves and midair dash. 對空中對手有效</td>
+        <td>按上 + Y</td>
+        <td>轉換為跳躍攻擊。可用寶可夢招式取消或跳躍衝刺。對空中對手有效</td>
         <td>80</td>
     </tr>
     <tr>
         <td>寶可連擊3</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Down + Y, Y</td>
+        <td>按下 + Y，Y</td>
         <td>無特殊效果</td>
         <td>76</td>
     </tr>
@@ -479,15 +485,15 @@ a:hover {
         <td>低姿勢弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Down + Y</td>
-        <td>可用寶可夢招式取消. Increased range during 同步爆發. Effective against 抓取 Attacks</td>
+        <td>按下 + Y</td>
+        <td>可用寶可夢招式取消。同步爆發時增加攻擊距離。對抓取攻擊有效</td>
         <td>20</td>
     </tr>
     <tr>
         <td>空中弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Midair Y</td>
+        <td>跳躍時按 Y</td>
         <td>無特殊效果</td>
         <td>10</td>
     </tr>
@@ -495,7 +501,7 @@ a:hover {
         <td>強力攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>X</td>
+        <td>按 X</td>
         <td>造成大量傷害</td>
         <td>60</td>
     </tr>
@@ -503,15 +509,15 @@ a:hover {
         <td>前方強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + X, X, X</td>
-        <td>Second & Third moves can be delayed</td>
+        <td>按前 + X，X，X</td>
+        <td>第二和第三個攻擊可以延遲</td>
         <td>160</td>
     </tr>
     <tr>
         <td>高姿勢強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Transition into midair dash with R.</td>
+        <td>轉換為跳躍衝刺</td>
         <td>無特殊效果</td>
         <td>80</td>
     </tr>
@@ -519,7 +525,7 @@ a:hover {
         <td>低姿勢強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Down + X, X</td>
+        <td>按下 + X，X</td>
         <td>無特殊效果</td>
         <td>120</td>
     </tr>
@@ -527,14 +533,14 @@ a:hover {
         <td>空中強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Midair X</td>
+        <td>跳躍時按 X</td>
         <td>無特殊效果</td>
         <td>50</td>
     </tr>
 </table>
     
     <div style="text-align: center; margin-top: 30px; color: #888;">
-        <p>資料來源: Serebii.net - 自動生成招式表</p>
+        <p>資料來源：Serebii.net - 自動生成招式表</p>
         <p><a href="index.html">返回首頁</a></p>
     </div>
 </body>
