--- a/耿鬼.html
+++ b/耿鬼.html
@@ -103,25 +103,7 @@ a:hover {
 <table>
     <tr>
         <th>招式名稱</th>
-        <th>招式類型</th>
-        <th>可用階段</th>
-        <th>按鈕組合</th>
-        <th>備註</th>
-        <th>傷害值</th>
-    </tr>
-    <tr>
-        <td>Shadow Drop</td>
-        <td>抓取</td>
-        <td>全階段</td>
-        <td>L + R during Synergy Burst</td>
-        <td>無特殊效果</td>
-        <td>164</td>
-    </tr>
-</table><h2>寶可夢招式</h2>
-<table>
-    <tr>
-        <th>招式名稱</th>
-        <th>招式類型</th>
+        <th>類型</th>
         <th>可用階段</th>
         <th>按鈕組合</th>
         <th>備註</th>
@@ -129,41 +111,131 @@ a:hover {
     </tr>
     <tr>
         <td>暗影球</td>
+        <td>爆發</td>
+        <td>全階段</td>
+        <td>同步爆發時按 L + R</td>
+        <td>可貫穿反擊攻擊。提升移動速度</td>
+        <td>262</td>
+    </tr>
+</table><h2>寶可夢招式</h2>
+<table>
+    <tr>
+        <th>招式名稱</th>
+        <th>類型</th>
+        <th>可用階段</th>
+        <th>按鈕組合</th>
+        <th>備註</th>
+        <th>傷害值</th>
+    </tr>
+    <tr>
+        <td>暗影拳</td>
         <td>一般</td>
         <td>全階段</td>
         <td>A</td>
-        <td>使用R轉為暗影隱身</td>
+        <td>可阻止對手行動</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>暗影拳～暗影球</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>A，X</td>
+        <td>可貫穿反擊攻擊。具有打擊抗性</td>
+        <td>120</td>
+    </tr>
+    <tr>
+        <td>暗影拳～強化暗影球</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>A，長按 X</td>
+        <td>可貫穿反擊攻擊。具有打擊抗性</td>
+        <td>120</td>
+    </tr>
+    <tr>
+        <td>暗影爪</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>前 + A</td>
+        <td>無特殊效果</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>暗影爪～暗影球</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>前 + A，X</td>
+        <td>可貫穿反擊攻擊。具有打擊抗性</td>
+        <td>120</td>
+    </tr>
+    <tr>
+        <td>暗影爪～強化暗影球</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>前 + A，長按 X</td>
+        <td>可貫穿反擊攻擊。具有打擊抗性</td>
+        <td>120</td>
+    </tr>
+    <tr>
+        <td>暗影潛襲</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>後 + A</td>
+        <td>無特殊效果</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>暗影潛襲～暗影球</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>後 + A，X</td>
+        <td>可貫穿反擊攻擊。具有打擊抗性</td>
+        <td>120</td>
+    </tr>
+    <tr>
+        <td>暗影潛襲～強化暗影球</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>後 + A，長按 X</td>
+        <td>可貫穿反擊攻擊。具有打擊抗性</td>
+        <td>120</td>
+    </tr>
+    <tr>
+        <td>暗影球</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按 A</td>
+        <td>使用 R 轉為暗影隱身</td>
         <td>50</td>
     </tr>
     <tr>
-        <td>蓄力暗影球</td>
+        <td>暗影球：蓄力</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Hold A</td>
-        <td>使用R轉為暗影隱身</td>
+        <td>長按 A</td>
+        <td>使用 R 轉為暗影隱身</td>
         <td>81</td>
     </tr>
     <tr>
         <td>催眠術</td>
         <td>抓取</td>
         <td>全階段</td>
-        <td>Forward + A</td>
-        <td>使用R轉為暗影隱身. 可破防</td>
+        <td>按前 + A</td>
+        <td>使用 R 轉為暗影隱身。可破防</td>
         <td>90</td>
     </tr>
     <tr>
         <td>暗影拳</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Backward + A</td>
+        <td>按後 + A</td>
         <td>創造連擊機會</td>
         <td>90</td>
     </tr>
     <tr>
-        <td>蓄力暗影拳</td>
+        <td>暗影拳：蓄力</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Backward + Hold A</td>
+        <td>按後 + 長按 A</td>
         <td>貫穿反擊</td>
         <td>102</td>
     </tr>
@@ -171,31 +243,31 @@ a:hover {
         <td>污泥炸彈</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>Charge and then release A</td>
-        <td>降低攻擊力. Can be activated in 空中</td>
+        <td>蓄力後放開 A</td>
+        <td>降低攻擊力。可在空中使用</td>
         <td>0</td>
     </tr>
     <tr>
         <td>驚嚇</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair A</td>
-        <td>使用R轉為暗影隱身</td>
+        <td>跳躍時按 A</td>
+        <td>使用 R 轉為暗影隱身</td>
         <td>77</td>
     </tr>
     <tr>
         <td>詛咒</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Down + A</td>
-        <td>Consumes HP. Increases Synergy Gauge. Cannot KO an opponent.</td>
+        <td>按下 + A</td>
+        <td>消耗生命值。增加同步槽。無法擊倒對手</td>
         <td>26</td>
     </tr>
 </table><h2>標準招式</h2>
 <table>
     <tr>
         <th>招式名稱</th>
-        <th>招式類型</th>
+        <th>類型</th>
         <th>可用階段</th>
         <th>按鈕組合</th>
         <th>備註</th>
@@ -205,95 +277,95 @@ a:hover {
         <td>抓取攻擊</td>
         <td>抓取</td>
         <td>全階段</td>
-        <td>Y + B</td>
-        <td>Absorbs opponent's Hit Points & Synergy Gauge</td>
+        <td>按 Y + B</td>
+        <td>吸收對手的生命值和同步槽</td>
         <td>100</td>
     </tr>
     <tr>
         <td>反擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>X + A</td>
-        <td>可用方向鍵+R取消</td>
+        <td>按 X + A</td>
+        <td>可用方向鍵 + R 取消</td>
         <td>60</td>
     </tr>
     <tr>
         <td>蓄力反擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>X + Hold A</td>
-        <td>Pierces 反擊 Attacks</td>
+        <td>按 X + 長按 A</td>
+        <td>貫穿反擊攻擊</td>
         <td>90</td>
     </tr>
     <tr>
         <td>滲透移動</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>Midair R</td>
-        <td>Makes you invincible when invisible</td>
+        <td>跳躍時按 R</td>
+        <td>隱形時無敵</td>
         <td>0</td>
     </tr>
     <tr>
         <td>暗影隱身</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>Forward + A, R</td>
-        <td>Maintained while holding the button. Can move with D-Pad. Invincible during.</td>
+        <td>按前 + A，R</td>
+        <td>按住按鈕時維持。可用方向鍵移動。期間無敵</td>
         <td>0</td>
     </tr>
     <tr>
         <td>蓄力強攻擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Charge and then release X</td>
-        <td>使用R轉為暗影隱身. 可用B取消. Increases Synergy Gauge</td>
+        <td>蓄力後放開 X</td>
+        <td>使用 R 轉為暗影隱身。可用 B 取消。增加同步槽</td>
         <td>80</td>
     </tr>
     <tr>
         <td>遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Y</td>
-        <td>Passes through opponent's Ranged Attacks</td>
+        <td>按 Y</td>
+        <td>可穿透對手的遠距離攻擊</td>
         <td>30</td>
     </tr>
     <tr>
         <td>連接遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Y, Y</td>
-        <td>Passes through opponent's Ranged Attacks</td>
+        <td>按 Y，Y</td>
+        <td>可穿透對手的遠距離攻擊</td>
         <td>78</td>
     </tr>
     <tr>
         <td>側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y</td>
-        <td>Passes through opponent's Ranged Attacks</td>
+        <td>按側 + Y</td>
+        <td>可穿透對手的遠距離攻擊</td>
         <td>30</td>
     </tr>
     <tr>
         <td>連接側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y, Y</td>
-        <td>Passes through opponent's Ranged Attacks</td>
+        <td>按側 + Y，Y</td>
+        <td>可穿透對手的遠距離攻擊</td>
         <td>80</td>
     </tr>
     <tr>
         <td>前方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Forward + Y</td>
-        <td>Passes through opponent's Ranged Attacks</td>
+        <td>按前 + Y</td>
+        <td>可穿透對手的遠距離攻擊</td>
         <td>80</td>
     </tr>
     <tr>
         <td>後方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Backward + Y</td>
+        <td>按後 + Y</td>
         <td>無特殊效果</td>
         <td>60</td>
     </tr>
@@ -301,15 +373,15 @@ a:hover {
         <td>跳躍遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Y</td>
+        <td>跳躍時按 Y</td>
         <td>可阻止對手</td>
         <td>40</td>
     </tr>
     <tr>
-        <td>Jumping Ranged Attack: Charge</td>
+        <td>跳躍遠距離攻擊：蓄力</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Hold Y</td>
+        <td>跳躍時長按 Y</td>
         <td>可阻止對手</td>
         <td>80</td>
     </tr>
@@ -317,31 +389,31 @@ a:hover {
         <td>追蹤攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, X</td>
-        <td>可用R取消 or B</td>
+        <td>按 X，X</td>
+        <td>可用 R 或 B 取消</td>
         <td>90</td>
     </tr>
     <tr>
         <td>蓄力追蹤攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, Hold X</td>
-        <td>貫穿反擊 and breaks the guard</td>
+        <td>按 X，長按 X</td>
+        <td>貫穿反擊並破防</td>
         <td>120</td>
     </tr>
     <tr>
         <td>跳躍攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair X</td>
-        <td>可用寶可夢招式取消. Change trajectory by pressing D-Pad 前 & 後</td>
+        <td>跳躍時按 X</td>
+        <td>可用寶可夢招式取消。按前後方向鍵改變軌跡</td>
         <td>80</td>
     </tr>
     <tr>
         <td>寶可連擊1</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Y, Y, Y</td>
+        <td>按 Y，Y，Y</td>
         <td>無特殊效果</td>
         <td>119</td>
     </tr>
@@ -349,7 +421,7 @@ a:hover {
         <td>弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Y, Y</td>
+        <td>按 Y，Y</td>
         <td>可用寶可夢招式取消</td>
         <td>84</td>
     </tr>
@@ -357,7 +429,7 @@ a:hover {
         <td>寶可連擊2</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + Y, Y</td>
+        <td>按前 + Y，Y</td>
         <td>無特殊效果</td>
         <td>80</td>
     </tr>
@@ -365,23 +437,23 @@ a:hover {
         <td>前方弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + Y</td>
-        <td>Transition to Shadow Stealth with R. 可用寶可夢招式取消</td>
+        <td>按前 + Y</td>
+        <td>使用 R 轉為暗影隱身。可用寶可夢招式取消</td>
         <td>40</td>
     </tr>
     <tr>
-        <td>Forward Weak Attack ~ Strong Attack Follow-Up</td>
+        <td>前方弱攻擊～強攻擊連擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + Y, X</td>
-        <td>Deals major damage.</td>
+        <td>按前 + Y，X</td>
+        <td>造成大量傷害</td>
         <td>88</td>
     </tr>
     <tr>
         <td>高姿勢弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + Y</td>
+        <td>按上 + Y</td>
         <td>反擊</td>
         <td>45</td>
     </tr>
@@ -389,7 +461,7 @@ a:hover {
         <td>低姿勢弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Down + Y</td>
+        <td>按下 + Y</td>
         <td>無特殊效果</td>
         <td>40</td>
     </tr>
@@ -397,7 +469,7 @@ a:hover {
         <td>寶可連擊3</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Midair Y, Y</td>
+        <td>跳躍時按 Y，Y</td>
         <td>無特殊效果</td>
         <td>97</td>
     </tr>
@@ -405,15 +477,15 @@ a:hover {
         <td>空中弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Midair Y</td>
+        <td>跳躍時按 Y</td>
         <td>可用寶可夢招式取消</td>
         <td>20</td>
     </tr>
     <tr>
-        <td>Poké Combo 4</td>
+        <td>寶可連擊4</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>X, X</td>
+        <td>按 X，X</td>
         <td>無特殊效果</td>
         <td>126</td>
     </tr>
@@ -421,23 +493,23 @@ a:hover {
         <td>強力攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>X</td>
+        <td>按 X</td>
         <td>可用寶可夢招式取消</td>
         <td>60</td>
     </tr>
     <tr>
-        <td>Strong Attack: Charge</td>
+        <td>強力攻擊：蓄力</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Hold X</td>
-        <td>貫穿反擊. 可用寶可夢招式取消</td>
+        <td>長按 X</td>
+        <td>貫穿反擊。可用寶可夢招式取消</td>
         <td>60</td>
     </tr>
     <tr>
-        <td>Poké Combo 5</td>
+        <td>寶可連擊5</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + X, X</td>
+        <td>按前 + X，X</td>
         <td>造成大量傷害</td>
         <td>124</td>
     </tr>
@@ -445,39 +517,39 @@ a:hover {
         <td>前方強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + X</td>
+        <td>按前 + X</td>
         <td>可用寶可夢招式取消</td>
         <td>60</td>
     </tr>
     <tr>
-        <td>Forward Strong Attack: Charge</td>
+        <td>前方強攻擊：蓄力</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + Hold X</td>
-        <td>貫穿反擊. 可用寶可夢招式取消</td>
+        <td>按前 + 長按 X</td>
+        <td>貫穿反擊。可用寶可夢招式取消</td>
         <td>60</td>
     </tr>
     <tr>
         <td>高姿勢強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + X</td>
-        <td>Change trajectory by pressing D-Pad diagonally upward</td>
+        <td>按上 + X</td>
+        <td>按斜上方向鍵改變軌跡</td>
         <td>60</td>
     </tr>
     <tr>
         <td>低姿勢強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Down + X, X</td>
+        <td>按下 + X，X</td>
         <td>無特殊效果</td>
         <td>101</td>
     </tr>
     <tr>
-        <td>Poké Combo 6</td>
+        <td>寶可連擊6</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Midair X, X</td>
+        <td>跳躍時按 X，X</td>
         <td>無特殊效果</td>
         <td>117</td>
     </tr>
@@ -485,7 +557,7 @@ a:hover {
         <td>空中強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Midair X</td>
+        <td>跳躍時按 X</td>
         <td>無特殊效果</td>
         <td>60</td>
     </tr>
@@ -493,7 +565,7 @@ a:hover {
 <table>
     <tr>
         <th>招式名稱</th>
-        <th>招式類型</th>
+        <th>類型</th>
         <th>可用階段</th>
         <th>按鈕組合</th>
         <th>備註</th>
@@ -503,87 +575,87 @@ a:hover {
         <td>抓取攻擊</td>
         <td>抓取</td>
         <td>全階段</td>
-        <td>Y + B</td>
-        <td>Absorbs opponent's Hit Points & Synergy Gauge</td>
+        <td>按 Y + B</td>
+        <td>吸收對手的生命值和同步槽</td>
         <td>153</td>
     </tr>
     <tr>
         <td>反擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>X + A</td>
-        <td>可用方向鍵+R取消</td>
+        <td>按 X + A</td>
+        <td>可用方向鍵 + R 取消</td>
         <td>110</td>
     </tr>
     <tr>
         <td>蓄力反擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>X + Hold A</td>
-        <td>Pierces counter attack</td>
+        <td>按 X + 長按 A</td>
+        <td>貫穿反擊攻擊</td>
         <td>154</td>
     </tr>
     <tr>
         <td>滲透移動</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>Midair R</td>
-        <td>Makes you invincible when invisible</td>
+        <td>跳躍時按 R</td>
+        <td>隱形時無敵</td>
         <td>0</td>
     </tr>
     <tr>
         <td>暗影隱身</td>
         <td>無傷害</td>
         <td>一般</td>
-        <td>Forward + A, R</td>
-        <td>Maintained while holding the button. Can move with D-Pad. Invincible during.</td>
+        <td>按前 + A，R</td>
+        <td>按住按鈕時維持。可用方向鍵移動。期間無敵</td>
         <td>0</td>
     </tr>
     <tr>
         <td>遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Y</td>
-        <td>Passes through opponent's Ranged Attacks</td>
+        <td>按 Y</td>
+        <td>可穿透對手的遠距離攻擊</td>
         <td>33</td>
     </tr>
     <tr>
         <td>連接遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Y, Y</td>
-        <td>Passes through opponent's Ranged Attacks. 貫穿反擊</td>
+        <td>按 Y，Y</td>
+        <td>可穿透對手的遠距離攻擊。貫穿反擊</td>
         <td>132</td>
     </tr>
     <tr>
         <td>側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y</td>
-        <td>Passes through opponent's Ranged Attacks</td>
+        <td>按側 + Y</td>
+        <td>可穿透對手的遠距離攻擊</td>
         <td>60</td>
     </tr>
     <tr>
         <td>連接側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y, Y</td>
-        <td>Passes through opponent's Ranged Attacks. 貫穿反擊</td>
+        <td>按側 + Y，Y</td>
+        <td>可穿透對手的遠距離攻擊。貫穿反擊</td>
         <td>181</td>
     </tr>
     <tr>
         <td>前方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Forward + Y</td>
-        <td>Passes through opponent's Ranged Attacks. 貫穿反擊</td>
+        <td>按前 + Y</td>
+        <td>可穿透對手的遠距離攻擊。貫穿反擊</td>
         <td>132</td>
     </tr>
     <tr>
         <td>後方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Backward  + Y</td>
+        <td>按後 + Y</td>
         <td>無特殊效果</td>
         <td>60</td>
     </tr>
@@ -591,150 +663,22 @@ a:hover {
         <td>跳躍遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Y</td>
+        <td>跳躍時按 Y</td>
         <td>可阻止對手</td>
         <td>44</td>
     </tr>
     <tr>
-        <td>Jumping Ranged Attack: Charge</td>
+        <td>跳躍遠距離攻擊：蓄力</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Hold Y</td>
+        <td>跳躍時長按 Y</td>
         <td>可阻止對手</td>
         <td>88</td>
-    </tr>
-    <tr>
-        <td>追蹤攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>X, X</td>
-        <td>可用R取消 or B</td>
-        <td>66</td>
-    </tr>
-    <tr>
-        <td>蓄力追蹤攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>X, Hold X</td>
-        <td>Pierces counter attack and breaks the guard</td>
-        <td>198</td>
-    </tr>
-    <tr>
-        <td>跳躍攻擊</td>
-        <td>一般</td>
-        <td>場地階段</td>
-        <td>Midair X</td>
-        <td>Can change trajectory by pressing forwards or backwards. 可用寶可夢招式取消</td>
-        <td>88</td>
-    </tr>
-    <tr>
-        <td>Poké Combo 7</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, Y, Y</td>
-        <td>無特殊效果</td>
-        <td>160</td>
-    </tr>
-    <tr>
-        <td>弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, Y</td>
-        <td>可用寶可夢招式取消</td>
-        <td>94</td>
-    </tr>
-    <tr>
-        <td>高姿勢弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + Y</td>
-        <td>Change location by pressing D-Pad diagonally upward</td>
-        <td>81</td>
-    </tr>
-    <tr>
-        <td>High Stance Weak Attack: Charge</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + Hold Y</td>
-        <td>無特殊效果</td>
-        <td>81</td>
-    </tr>
-    <tr>
-        <td>低姿勢弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + Y</td>
-        <td>無特殊效果</td>
-        <td>66</td>
-    </tr>
-    <tr>
-        <td>Poké Combo 8</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair Y, Y</td>
-        <td>無特殊效果</td>
-        <td>114</td>
-    </tr>
-    <tr>
-        <td>空中弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair Y</td>
-        <td>可用寶可夢招式取消</td>
-        <td>31</td>
-    </tr>
-    <tr>
-        <td>強力攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>X</td>
-        <td>造成大量傷害</td>
-        <td>99</td>
-    </tr>
-    <tr>
-        <td>Strong Attack: Charge</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Hold X</td>
-        <td>反擊 attack pierce. 造成大量傷害</td>
-        <td>141</td>
-    </tr>
-    <tr>
-        <td>高姿勢強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + X</td>
-        <td>Change trajectory by pressing D-Pad diagonally upward.</td>
-        <td>125</td>
-    </tr>
-    <tr>
-        <td>低姿勢強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + X</td>
-        <td>無特殊效果</td>
-        <td>132</td>
-    </tr>
-    <tr>
-        <td>Poké Combo 9</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair X, X</td>
-        <td>無特殊效果</td>
-        <td>125</td>
-    </tr>
-    <tr>
-        <td>空中強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair X</td>
-        <td>Can change trajectory by pressing up & down. 可用寶可夢招式取消</td>
-        <td>34</td>
     </tr>
 </table>
     
     <div style="text-align: center; margin-top: 30px; color: #888;">
-        <p>資料來源: Serebii.net - 自動生成招式表</p>
+        <p>資料來源：Serebii.net - 自動產生招式表</p>
         <p><a href="index.html">返回首頁</a></p>
     </div>
 </body>
